# sonia_bt_runner

./: CMakeLists.txt  README.md  package.xml
include/sonia_bt_runner/: SoniaNodes.hpp
include/sonia_bt_runner/conditions/: CheckAiInfo.hpp  CheckRotationAlign.hpp  CheckRotationZAlign.hpp  CheckTranslationAlign.hpp  CheckTranslationXYAlign.hpp  CheckTranslationYZAlign.hpp  CheckWidthAngle.hpp  MissionSwitchStatus.hpp  SoniaConditions.hpp
include/sonia_bt_runner/stateful_actions/: ControlSetMode.hpp  SendTrajToPlanner.hpp  SoniaStatefulActions.hpp  WaitTargetReached.hpp
include/sonia_bt_runner/sync_actions/: AIActivation.hpp  ActuatorsAction.hpp  AddPoseToTraj.hpp  AiActivation.hpp  DropperActionNode.hpp  EnableDisableDVL.hpp  ExtractAiListItem.hpp  GetAiInfo.hpp  GetAlignStrafe.hpp  GetAngle.hpp  GetClosestObj.hpp  GetTorpedoTarget.hpp  InitTraj.hpp  MoveToTarget.hpp  SoniaSyncActions.hpp  TareDepth.hpp
include/sonia_bt_runner/tutorial/: TutorialNodes.hpp
include/sonia_bt_runner/utils/: AiDetection.hpp  AiDetectionArray.hpp  Trajectory.hpp  TrajectoryPose.hpp
missions/: DropperTest.xml  Move.xml  Move2x180.xml  MoveSinglePose.xml  Project.btproj  Sonia.btproj  SoniaModels.xml
src/: gen_nodes.cpp  main.cpp
src/conditions/: CheckAiInfo.cpp  CheckRotationAlign.cpp  CheckRotationZAlign.cpp  CheckTranslationAlign.cpp  CheckTranslationXYAlign.cpp  CheckTranslationYZAlign.cpp  CheckWidthAngle.cpp  MissionSwitchStatus.cpp
src/stateful_actions/: ControlSetMode.cpp  SendTrajToPlanner.cpp  WaitTargetReached.cpp
src/sync_actions/: ActuatorsAction.cpp  AddPoseToTraj.cpp  AiActivation.cpp  DropperActionNode.cpp  EnableDisableDVL.cpp  ExtractAiListItem.cpp  GetAiInfo.cpp  GetAlignStrafe.cpp  GetAngle.cpp  GetClosestObj.cpp  GetTorpedoTarget.cpp  InitTraj.cpp  MoveToTarget.cpp  TareDepth.cpp
